[tool.poetry]
name = "update_daemon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
entsoe-py = "^0.5.9"
pandas = "^2.0.0"
pytz = "^2023.3"
loguru = "^0.6.0"
paho-mqtt = "^1.6.1"
sqlalchemy = "^2.0.9"
mysql-connector-python = "^8.0.32"
schedule = {git = "https://github.com/dbader/schedule.git", rev = "3eac646a8d2658929587d7454bd2c85696df254e"}
matplotlib = "^3.7.1"
flask = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
